# lycam-ui

./: .dir-locals.el  CMakeLists.txt  project.config
src/: CMakeLists.txt  imageviewer.cc  imageviewer.hh  lycam.qrc  main.cc  mainwindow.cc  mainwindow.hh
src/forms/: mainwindow.ui
